tests/snapshots/diagnostic_tests__ui@too_big_number_literal.au.snap
---
source: tests/diagnostic_tests.rs
expression: "\nfn main() {\n\tlet a: I32 = 9000000000\n}\n"
input_file: tests/inputs/diagnostics/too_big_number_literal.au
---
Error: Value outside of valid range
   ╭─[ too_big_number_literal:3:15 ]
   │
 3 │     let a: I32 = 9000000000
   │                  ─────┬────  
   │                       ╰────── Value 9000000000 is outside the valid range -2147483648..=2147483647 for type `I32`
───╯
